hphp/hack/test/typecheck/class_const_already_bound.php.exp
File "class_const_already_bound.php", line 5, characters 3-15:
Cannot redeclare Foo::bar (Parsing[1002])
