hphp/hack/test/typecheck/class_const_already_bound.php
<?hh // partial

class Foo {
  const bar = 1;
  const bar = 2;
}
